@@ -1,4 +1,7 @@
-2005-04-30  Benhur Stein <benhur@inf.ufsm.br>
+2005-05-07  Benhur Stein <benhur@inf.ufsm.br>
+	* PajeSimulator/SimulContainer.m [-start/endUserLink...]: code cleanup
+
+2005-05-07  Benhur Stein <benhur@inf.ufsm.br>
 	* PajeSimulator/SimulContainer.m
           [-enumeratorOfEntitiesTyped:fromTime:toTime:]: new method
         * StorageController/Encapsulate.m
